// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Dive Site component will render site with full details 1`] = `
"<!--v-if-->
<div class="flex items-baseline gap-6">
  <div class="rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[32px] w-fit shadow-inner shadow-grey-800"><span class="relative"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Constance_Walker19"><!--v-if--></span><span class="pr-2 font-bold text-sm">@Constance_Walker19</span></div>
  <p>4 years ago</p>
</div>
<div class="\`grid grid-cols-1 lg:grid-cols-2 gap-3\`">
  <div class="space-y-3">
    <h1 class="text-2xl font-bold font-title">Location</h1>
    <div class="flex gap-2 items-baseline">
      <p class="text-lg">Waldorf, ME, JO</p>
      <p class="ml-2">
      <p class="space-x-1 inline-block"><span class="text-danger"><i class="fa-solid fa-location-dot"></i></span><span>72.67890N, -105.33060W</span></p>
      </p>
    </div>
    <div class="mx-auto w-auto md:w-[640px] aspect-video">
      <div class="w-full aspect-video shadow-md shadow-grey-900 rounded-sm"></div>
    </div>
  </div>
  <div class="space-y-3">
    <div>
      <h1 class="text-2xl font-bold font-title">Directions</h1>
      <p>Maiores natus doloribus laudantium at. Ducimus consectetur vitae quo deserunt doloremque consequuntur quibusdam quis. Beatae autem accusamus suscipit accusantium.</p>
    </div>
    <div>
      <h1 class="text-2xl font-bold font-title">Description</h1>
      <p>Possimus animi voluptate repellendus hic facilis dolorem. Animi natus perspiciatis ut voluptate velit eos vel nihil doloremque. Dolorem tenetur magnam maxime. Aut doloribus eveniet corporis.</p>
    </div>
    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
      <div class="text-center"><label class="font-bold">Depth</label>
        <p class="mt-1.5"><span class="mr-1"><i class="fas fa-tachometer-alt fa-sm"></i></span><span>21.62 m</span></p>
      </div>
      <div class="text-center"><label class="font-bold">Shore Access</label>
        <p class="mt-1.5"><span class="mr-1"><i class="fas fa-anchor fa-sm"></i></span><span>Accessible from shore</span></p>
      </div>
      <div class="text-center"><label class="font-bold">Free To Dive</label>
        <div class="mt-1.5"><span class="mr-1"><i class="far fa-money-bill-alt fa-sm"></i></span><span>Free to dive</span></div>
      </div>
      <div class="text-center"><label class="font-bold">Water Type</label>
        <div class="mt-1.5"><span class="mr-1"><i class="fa-solid fa-droplet"></i></span><span>Fresh water</span></div>
      </div>
    </div>
  </div>
  <div class="col-span-1 lg:col-span-2 space-y-3">
    <h1 class="text-2xl font-bold font-title">Reviews</h1>
    <div class="bg-blue-300 dark:bg-blue-900 p-3 rounded-md shadow-md shadow-grey-800 flex flex-col gap-1 sticky top-16 z-[40]">
      <div class="flex flex-col items-center justify-start lg:flex-row lg:items-baseline lg:justify-between">
        <p><span>Showing </span><span class="font-bold">0</span><span> of </span><span class="font-bold">0</span><span> reviews</span></p>
        <div class="flex justify-center md:justify-end gap-2 items-baseline">
          <div><select id="site-reviews-sort-order" class="bg-grey-200 border-2 border-grey-600 text-grey-950 rounded-lg block py-1 px-2 h-8 dark:bg-grey-300 dark:placeholder-grey-400 disabled:bg-grey-400 disabled:text-grey-700 disabled:dark:bg-grey-500 min-w-36" data-testid="site-reviews-sort-order" name="site-reviews-sort-order">
              <option value="createdOn-desc">Age (most recent to oldest)</option>
              <option value="createdOn-asc">Age (oldest to most recent)</option>
              <option value="rating-desc">Rating (highest to lowest)</option>
              <option value="rating-asc">Rating (lowest to highest)</option>
            </select></div>
          <!--v-if-->
        </div>
      </div>
      <div class="flex flex-col items-center justify-start lg:flex-row lg:items-baseline lg:justify-between">
        <div class="flex gap-1"><label class="font-bold">Average Rating:</label>
          <div readonly="">5</div>
        </div>
        <div class="flex gap-1"><label class="font-bold ml-3">Average Difficulty:</label>
          <div class="min-w-20 relative group">
            <div class="flex items-baseline gap-1">
              <div class="grow rounded-full bg-grey-600 h-1.5 mb-4">
                <div class="rounded-full h-1.5 bg-secondary" style="width: 88.0%;"></div>
              </div><span>4.4</span>
            </div>
            <div class="invisible group-hover:visible text-pretty text-sm italic shadow-md shadow-grey-700/60 absolute top-[80%] -left-4 z-[50] p-1 rounded-md bg-secondary text-grey-800 min-w-32">Challenging, suitable for more experienced or advanced divers</div>
          </div>
        </div>
      </div>
    </div>
    <div class="text-center text-lg my-8">
      <p class="space-x-3 italic"><span><i class="fas fa-spinner fa-spin"></i></span><span>Fetching dive site reviews...</span></p>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`View Dive Site component will render site with minimal details 1`] = `
"<!--v-if-->
<div class="flex items-baseline gap-6">
  <div class="rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[32px] w-fit shadow-inner shadow-grey-800"><span class="relative"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Grayson.Wolff58"><!--v-if--></span><span class="pr-2 font-bold text-sm">@Grayson.Wolff58</span></div>
  <p>4 years ago</p>
</div>
<div class="\`grid grid-cols-1 lg:grid-cols-2 gap-3\`">
  <div class="space-y-3">
    <h1 class="text-2xl font-bold font-title">Location</h1>
    <div class="flex gap-2 items-baseline">
      <p class="text-lg">Hudsonstad, NV, HM</p>
      <p class="ml-2">
      <p class="space-x-1 inline-block"><span class="text-danger"><i class="fa-solid fa-location-dot"></i></span><span>Unspecified</span></p>
      </p>
    </div>
    <!--v-if-->
  </div>
  <div class="space-y-3">
    <!--v-if-->
    <!--v-if-->
    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
      <div class="text-center"><label class="font-bold">Depth</label>
        <p class="mt-1.5"><span class="mr-1"><i class="fas fa-tachometer-alt fa-sm"></i></span><span>Unspecified</span></p>
      </div>
      <div class="text-center"><label class="font-bold">Shore Access</label>
        <p class="mt-1.5"><span class="mr-1"><i class="fas fa-anchor fa-sm"></i></span><span>Unknown</span></p>
      </div>
      <div class="text-center"><label class="font-bold">Free To Dive</label>
        <div class="mt-1.5"><span class="mr-1"><i class="far fa-money-bill-alt fa-sm"></i></span><span>Unknown</span></div>
      </div>
      <div class="text-center"><label class="font-bold">Water Type</label>
        <div class="mt-1.5"><span class="mr-1"><i class="fa-solid fa-droplet"></i></span><span>Unknown</span></div>
      </div>
    </div>
  </div>
  <div class="col-span-1 lg:col-span-2 space-y-3">
    <h1 class="text-2xl font-bold font-title">Reviews</h1>
    <div class="bg-blue-300 dark:bg-blue-900 p-3 rounded-md shadow-md shadow-grey-800 flex flex-col gap-1 sticky top-16 z-[40]">
      <div class="flex flex-col items-center justify-start lg:flex-row lg:items-baseline lg:justify-between">
        <p><span>Showing </span><span class="font-bold">0</span><span> of </span><span class="font-bold">0</span><span> reviews</span></p>
        <div class="flex justify-center md:justify-end gap-2 items-baseline">
          <div><select id="site-reviews-sort-order" class="bg-grey-200 border-2 border-grey-600 text-grey-950 rounded-lg block py-1 px-2 h-8 dark:bg-grey-300 dark:placeholder-grey-400 disabled:bg-grey-400 disabled:text-grey-700 disabled:dark:bg-grey-500 min-w-36" data-testid="site-reviews-sort-order" name="site-reviews-sort-order">
              <option value="createdOn-desc">Age (most recent to oldest)</option>
              <option value="createdOn-asc">Age (oldest to most recent)</option>
              <option value="rating-desc">Rating (highest to lowest)</option>
              <option value="rating-asc">Rating (lowest to highest)</option>
            </select></div>
          <!--v-if-->
        </div>
      </div>
      <div class="flex flex-col items-center justify-start lg:flex-row lg:items-baseline lg:justify-between">
        <div class="flex gap-1"><label class="font-bold">Average Rating:</label>
          <div readonly="">0</div>
        </div>
        <div class="flex gap-1"><label class="font-bold ml-3">Average Difficulty:</label><span>Not rated</span></div>
      </div>
    </div>
    <div class="text-center text-lg my-8">
      <p class="space-x-3 italic"><span><i class="fas fa-spinner fa-spin"></i></span><span>Fetching dive site reviews...</span></p>
    </div>
    <!--v-if-->
  </div>
</div>"
`;
